# Aperol-Maps

./: .gitignore  README.md  docker-compose.yml  package-lock.json  start.ps1
API/: .env.example  Cargo.toml  Dockerfile
API/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  session.rs
aperol-maps-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
aperol-maps-frontend/src/: App.css  App.tsx
aperol-maps-frontend/src/components/: Auth.tsx  MapView.tsx  MyListsView.tsx  RecommendationView.tsx  SaveToListDialog.tsx  SearchBar.tsx  SessionJoiner.tsx  ShareSessionDialog.tsx  SheetView.tsx  UserProfileMenu.tsx  VenueMarker.tsx
aperol-maps-frontend/src/components/ui/: accordion.tsx  avatar.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  textarea.tsx
aperol-maps-frontend/src/hooks/: useAuth.ts  useRestaurants.ts  useSearch.ts  useUserLists.ts
aperol-maps-frontend/src/lib/: api.ts  store.ts  types.ts  utils.ts
data-aquisition/: .env.example  Dockerfile  cleaner.py  crawler.py  producer.py  requirements.txt  test.json  update_processor.py  uploader.py  urls.json
data-aquisition/incoming_urls/: New Text Document.txt
data-aquisition/legacy/: cleaned_output.json  extractor.py  raw_output.json
data-aquisition/prompts/: combined_extraction_prompt.txt  image_extraction_prompt.txt  navigation_prompt.txt  site_analysis_prompt.txt
