[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mongodb = { version = "3.2.4"}
futures = "0.3.30"
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
dashmap = "6.1.0"
axum-extra = { version="0.10.1", features =["multipart"] }
base64 = "0.22.1"
redis = { version = "0.32.5", features = ["aio", "json", "tokio-comp"] }
async-trait = "0.1.89"

[profile.dev]
opt-level = 0  
debug = true
codegen-units = 256
lto = false

    